--- a/style.css
+++ b/style.css
@@ -1,181 +1,216 @@
-/* Font setting */
-@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Petemoss&display=swap");
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	font-family: "Cinzel", serif;
 }
-/* General Body settings */
+
+html, body {
+	height: 100%;
+	margin: 0;
+}
+
 body {
-    font-family: 'Lato';
-    font-size: 20px;
-    line-height: 1.5;
-    color: #fad744;
-    background-color: #ef5455;
+	margin: 0;
+	padding: 0;
+	background-image: url('/images/alchemy1.png'); /* Replace 'path_to_your_image.jpg' with the path to your image */
+  background-size: cover; /* This will ensure your image covers the entire viewport */
+  background-repeat: no-repeat; /* This will ensure the image doesn't repeat */
+  background-attachment: fixed; /* This ensures the background image doesn't scroll with the content */
+  background-position: center center; /* This will center the image */
 }
 
-img {
-    max-width: 100%;
-}
-/* Headers using separate fonts */
-h1, h2, h3{
-    margin-bottom: 20px;
-    font-family: 'Arvo';
-}
-
-ul {
-    list-style-type: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+	margin: 0;
 }
 
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 30px;
-}
-/* Navbar settings */
-.navbar {
-    background-color: #fad744;
-    color: #ef5455;
-    height: 60px;
-    margin-top: 20px;
-    border-radius: 10px;
+main {
+	display: flex;
+	justify-content: center;
+	perspective: 1200px; 
+	cursor: url('/images/potion-small.png'), auto;
 }
 
-.navbar a {
-    color: #ef5455;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
+.book {
+	--book-height: 100vh;
+	--book-ratio: 1.4;
+	transition: transform 0.5s;
 }
 
-.navbar a:hover {
-    color: white;
-    cursor: pointer;
+.book > div {
+	height: var(--book-height);
+	width: calc(var(--book-height) / var(--book-ratio));
+	overflow: auto;
+	background-color: #0a0a0a;
+	transform: scale(0.9);
+	border-radius: 6px;
+	transform-origin: left;
+	box-shadow: 
+		0 10px 15px rgba(0, 0, 0, 0.3), /* Inner shadow */
+		0 20px 25px rgba(0, 0, 0, 0.4), /* Middle shadow */
+		0 30px 35px rgba(0, 0, 0, 0.5); /* Outermost shadow */
 }
 
-.navbar .logo {
-    font-size: x-large;
-    font-weight: bolder;
+.book-cover {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	z-index: 9;
+	text-align: center;
+	background: 
+		linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
+		linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
+		linear-gradient(315deg, black 25%, transparent 25%),
+		linear-gradient(45deg, black 25%, transparent 25%),
+		linear-gradient(to right, rgba(0,0,0,0.2), rgba(0,0,0,0.1), transparent, rgba(0,0,0,0.1), rgba(0,0,0,0.2)); /* Add this gradient for a 3D effect on the book cover */
+	background-size: 2em 2em, 100%;
+	background-color: #232323;
+	color: white;
+	transition: transform 2s;
+	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6), 
+                -5px -5px 15px rgba(255, 255, 255, 0.1); /* This adds a shadow to the right and bottom and a slight light effect to the top and left */
+    border: 1px solid rgba(0, 0, 0, 0.2); /* A subtle border can sometimes help */
+    border-radius: 5px;
+
 }
 
-.navbar .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.book-cover::before {
+	content: "";
+	position: absolute;
+	width: 20px;
+	right: 20px;
+	top: 0;
+	bottom: 0;
+	background-color: #1bec10;
+}
+
+.book-cover-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-}
-
-.navbar ul {
     display: flex;
-}
-
-.navbar ul li {
-    margin-left: 20px;
-}
-
-.header {
-    background-color: #2b3252;
-    color: #fad744;
-    min-height: 400px;
-    margin-top: 20px;
-    border-radius: 10px;
-}
-
-.header h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 1.2;
-}
-
-.header img {
-    max-width: 300px;
-    margin-top: 50px;
-    margin-left: 80px;
-}
-
-.header .container {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    transform: rotateY(180deg);
+    backface-visibility: hidden; /* Hide when not in view */
+    opacity: 0; /* Initially hidden */
+    transition: opacity 0.3s 1s; /* Transition for smooth appearance */
+    color: #dbd75d; /* Adjust color to your liking */
+    font-size: 18px; /* Adjust font size to your liking */
 }
 
-.boxes .container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.box {
-    flex: 1;
-    background: #fad744;
-    color: #ef5455;
-    border-radius: 20px;
-    margin: 20px 10px;
-    padding: 15px 20px;
-
-}
-.box i {
-    margin: 10px;
-
-}
-/* covers Skill & Portfolio area */
-.skill, .portfolio {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #2b3252;
-    text-decoration: none;
-    color: #fad744;
-    min-height: 200px;
-    align-items: center;
-    font-size: 16px;
-    border-radius: 10px;
-}
-
-.skill, .portfolio a {
-    color: #fad744;
-    text-decoration: none;
-}
-
-.skill, .portfolio a:hover {
-    color: white;
-    cursor: pointer;
-}
-
-.port {
-    border:#ef5455;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 10px;
-    padding: 10px
-}
-.contact {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    color: #ef5455;
-    background-color: #fad744;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-}
-
-.contact a:hover {
-    cursor: pointer;
-
-}
-/* found settings online to help if you are on mobile */
-@media (max-width: 700px) {
-    .header .container {
-    flex-direction: column;
-    padding-top: 20px;
-    text-align: center;
-}
-    .boxes .container {
-        display: block;
-        text-align: center;
-    }
+.book:hover .book-cover-inner {
+    opacity: 1; /* Show when book is hovered */
+		transform: scale(1.05) translateY(-10px);
 }
 
 
+h1 {
+	font-family: 'MedievalSharp', cursive;
+	font-size: 60px;
+	font-weight: 300;
+	color: #dbd75d;
+}
 
+h2 {
+	font-size: 26px;
+	font-family: 'MedievalSharp', cursive;
+}
+
+.separator {
+	--separator-width: 200px;
+	height: 2px;
+	width: var(--separator-width);
+	background-color: #dbd75d;
+	margin: 50px auto 60px auto;
+	position: relative;
+	overflow: visible; /* To ensure pseudo-elements are visible */
+}
+
+.separator::after,
+.separator::before {
+	content: "";
+	position: absolute;
+	height: 30px; /* Length of the ornate design */
+	width: 2px;
+	background-color: #dbd75d;
+	top: 50%;
+	transform: translateY(-50%); /* Centering */
+}
+
+.separator::before {
+	left: -10px; /* Positioning the ornate design slightly outside of the main bar */
+	background: linear-gradient(to bottom, #dbd75d, transparent); /* Gradient for an ornate effect */
+}
+
+.separator::after {
+	right: -10px; /* Positioning the ornate design slightly outside of the main bar */
+	background: linear-gradient(to bottom, transparent, #dbd75d); /* Gradient for an ornate effect */
+}
+
+.book-content {
+	transform: scale(0.9) translateY(30px);
+	background-color: #F5DEB3 !important;
+	transition: all 0.3s 1s;
+}
+
+.book-content h3,
+.book-content p {
+	opacity: 0;
+	transition: all 0.3s 0.3s;
+}
+
+h3 {
+	padding: 30px;
+}
+
+p {
+	padding: 0px 30px 10px 30px;
+	text-align: justify;
+	font-size: 14px;
+}
+
+.book-cover > div {
+	transition: opacity 0s 0.6s;
+}
+
+.book:hover > .book-cover {
+	transform: rotateY(180deg) scale(0.9);
+}
+
+.book:hover > .book-cover > div {
+	opacity: 0;
+}
+
+.book:hover > .book-content {
+	transform: scale(0.9) translateY(0px);
+}
+
+.book:hover > .book-content h3,
+.book:hover > .book-content p {
+	opacity: 1;
+}
+
+#skills img {
+	height: 30px;
+	width: 30px;
+}
+
+#skills li {
+	list-style: none;
+}
+
+.skills-container ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
