--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url('/images/alchemy1.png'); /* Replace 'path_to_your_image.jpg' with the path to your image */
+	background-image: url('images/alchemy1.png'); /* Replace 'path_to_your_image.jpg' with the path to your image */
   background-size: cover; /* This will ensure your image covers the entire viewport */
   background-repeat: no-repeat; /* This will ensure the image doesn't repeat */
   background-attachment: fixed; /* This ensures the background image doesn't scroll with the content */
@@ -33,7 +33,7 @@ main {
 	display: flex;
 	justify-content: center;
 	perspective: 1200px; 
-	cursor: url('/images/cursor.png') 0 32, auto;
+	cursor: url('images/cursor.png') 0 32, auto;
 }
 
 .book {
@@ -200,7 +200,7 @@ p {
 }
 
 a:hover {
-	cursor: url('/images/cursor-glow.png') 0 32, auto;
+	cursor: url('images/cursor-glow.png') 0 32, auto;
 }
 
 #skills img {
