--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ main {
 	display: flex;
 	justify-content: center;
 	perspective: 1200px; 
-	cursor: url('images/cursor.png') 0 32, auto;
 }
 
 .book {
@@ -199,8 +198,13 @@ p {
 	opacity: 1;
 }
 
+a {
+	transition: all 0.3s ease-in-out; /* smooth transition */
+	text-decoration: none; /* remove underlines */
+}
+
 a:hover {
-	cursor: url('images/cursor-glow.png') 0 32, auto;
+	text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00; /* green glow */
 }
 
 #skills img {
