--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ a:hover {
 .project img {
 	flex: 1; /* Adjust this value to control the space the image takes up */
 	max-width: 40px;
+	min-width: 40px;
 	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 	border-radius: 10px;
 }
@@ -297,13 +298,3 @@ a:hover {
 	align-items: center;
 }
 
-@media (max-width: 768px) {
-	.project {
-		flex-direction: column; /* Stack items vertically on smaller screens */
-		align-items: flex-start; /* Align to the start */
-	}
-	.project img, .project h4, .project p {
-		max-width: 100%; /* Allow them to take the full width */
-		margin-bottom: 10px; /* Add some spacing between items */
-	}
-}
