--- a/style.css
+++ b/style.css
@@ -231,8 +231,8 @@ a:hover {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin-left: 20px;
 	flex-wrap: wrap;
+	gap: 5px;
 }
 
 .project img {
@@ -281,11 +281,15 @@ a:hover {
 .project h4{
 	flex: 1.5; /* Adjust this value to control the space the title and description take up */
 	text-align: justify;
+	margin: 0 10px 0 0;
+	padding: 0px;
 }
 
 .project p {
 	flex: 3;
 	text-align: justify;
+	margin: 0 20px 0 0;
+	padding: 0px;
 }
 
 #skills img {
@@ -302,6 +306,7 @@ a:hover {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+	padding-left: 0px;
 }
 #wrapper {
 	width: 100%;
@@ -321,6 +326,7 @@ a:hover {
   padding: 10px;
   text-align: left;
   border-bottom: 1px solid #ddd; /* adjust as needed */
+	padding-left: 30px;
 }
 
 
@@ -336,6 +342,38 @@ a:hover {
                0 0 30px rgba(92,228,147,255);
   background-color: rgba(92,228,147,255); /* Optional: change background color on hover */
 }
+
+#contact-list {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+#twitch-logo:hover {
+	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out; /* smooth transition */
+	box-shadow: 0 0 10px rgba(145,70,255,255),
+							 0 0 20px rgba(145,70,255,255),
+							 0 0 30px rgba(145,70,255,255);
+	background-color: rgba(145,70,255,255); /* Optional: change background color on hover */
+}
+
+#discord-logo:hover {
+	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out; /* smooth transition */
+	box-shadow: 0 0 10px rgba(114,137,218,255),
+							 0 0 20px rgba(114,137,218,255),
+							 0 0 30px rgba(114,137,218,255);
+	background-color: rgba(114,137,218,255); /* Optional: change background color on hover */
+}
+
+#linkedin-logo:hover {
+	transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out; /* smooth transition */
+	box-shadow: 0 0 10px rgba(0,119,181,255),
+							 0 0 20px rgba(0,119,181,255),
+							 0 0 30px rgba(0,119,181,255);
+	background-color: rgba(0,119,181,255); /* Optional: change background color on hover */
+}
+
+
 
 @media (max-width: 1024px) {
 	/* Reset or override styles for .book */
